# kickbase

./: .dockerignore  .env.skeleton  .gitignore  .prototools  Cargo.toml  Dockerfile  Makefile  README.md  biome.json  bun.lockb  default.nix  docker-compose.yml  dockerManifest.json  flake.nix  moon.yml  package.json  rust-toolchain.toml
.config/: nextest.toml
.devcontainer/: Dockerfile
.github/: CODEOWNERS
.github/workflows/: nix-cachix.yml  nix-gha-cache.yml
.moon/: tasks.yml  toolchain.yml  workspace.yml
assets/: kickbase.postman_collection.json  kickbase.postman_environment.json  main.css
crates/api/: Cargo.toml  moon.yml
crates/api/src/: lib.rs
crates/api/src/achievements/: get_achievements.rs  mod.rs
crates/api/src/auth/: mod.rs
crates/api/src/chat/: exchange_custom_token.rs  get_message.rs  mod.rs  post_message.rs
crates/api/src/competition/: mod.rs  search_players.rs
crates/api/src/gift/: collect_gift.rs  get_current_gift.rs  mod.rs
crates/api/src/http/: league.rs  mod.rs  user.rs
crates/api/src/http/auth/: mod.rs
crates/api/src/http/league/: mod.rs
crates/api/src/league/: comment_league.rs  get_feed.rs  get_feed_comments.rs  get_info.rs  get_leagues.rs  get_players_for_match_day.rs  get_stats.rs  get_user_profile.rs  get_users.rs  mod.rs
crates/api/src/lineup/: get_lineup.rs  get_lineup_extended.rs  mod.rs
crates/api/src/lineup/formation/: mod.rs
crates/api/src/live/: mod.rs
crates/api/src/market/: mod.rs
crates/api/src/player/: get_player_feed.rs  get_player_info.rs  get_player_points.rs  get_player_stats.rs  mod.rs  search_competition_players.rs
crates/api/src/user/: get_user.rs  get_user_match_day_feed.rs  league_user_info.rs  login.rs  mod.rs  refresh_chat_token.rs  reset_password.rs
crates/kickbase/: Cargo.toml  moon.yml
crates/kickbase/src/: main.rs
crates/kickbase/src/server/: mod.rs
crates/kickbase/src/server/router/routes/dashboard/: get.rs
crates/kickbase/src/server/router/routes/login/: post.rs
crates/server/: Cargo.toml  moon.yml
crates/server/src/: address.rs  lib.rs
crates/server/src/router/routes/assets/: mod.rs
crates/server/src/router/routes/dashboard/: get.rs
crates/server/src/router/routes/home/: get.rs
crates/server/src/router/routes/login/: get.rs  post.rs
crates/server/templates/components/: hero.html
crates/workspace/: Cargo.toml
src/: constants.rs  http.rs  main.rs  router.rs  routes.rs  server.rs  templates.rs
src/backend/: Cargo.toml  Makefile  moon.yml
src/backend/src/: main.rs
src/frontend/: moon.yml
src/http/: mod.rs
src/server/: constants.rs  http.rs  mod.rs  port.rs
src/server/router/: mod.rs
src/server/router/routes/: mod.rs
src/server/router/routes/assets/: mod.rs
src/server/router/routes/home/: get.rs  mod.rs
src/server/router/routes/login/: get.rs  post.rs
src/server/templates/: mod.rs
src/server/templates/home/: mod.rs
src/server/templates/login/: mod.rs
templates/components/: hero.html
templates/components/login/: get.html  post.html
templates/layouts/: base.html
templates/pages/login/: get.html  post.html
