[workspace]
resolver = "2"
members = ["crates/*", "crates/workspace"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"

[workspace.metadata.crane]
name = "kickbase"

[workspace.dependencies]
api = { path = "./crates/api" }
server = { path = "./crates/server" }
kickbase = { path = "./crates/kickbase" }
workspace = { path = "./crates/workspace" }
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
axum = "0.7.5"
reqwest = { version = "0.12.7", features = ["json", "cookies"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tower = "0.5.0"
tower-http = { version = "0.6.1", features = ["fs"] }
