[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
workspace = { version = "0.1", path = "../workspace" }

[dev-dependencies]
httpmock = "0.7.0"
