[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
api = { path = "../api" }
askama = "0.12.1"
askama_axum = "0.4.0"
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
workspace = { version = "0.1", path = "../workspace" }
