[package]
name = "workspace"
description = "workspace-hack package, managed by hakari"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

### BEGIN HAKARI SECTION
[dependencies]
memchr = { version = "2" }
mime_guess = { version = "2" }

[build-dependencies]
memchr = { version = "2" }
mime_guess = { version = "2" }

### END HAKARI SECTION
