[package]
name = "workspace"
description = "workspace-hack package, managed by hakari"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

### BEGIN HAKARI SECTION
[dependencies]
futures-core = { version = "0.3" }
futures-task = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3" }
lalrpop-util = { version = "0.20", features = ["lexer"] }
log = { version = "0.4", default-features = false, features = ["kv_unstable", "std"] }
memchr = { version = "2" }
mime_guess = { version = "2" }
regex = { version = "1" }
regex-automata = { version = "0.4", default-features = false, features = ["dfa-onepass", "hybrid", "meta", "nfa-backtrack", "perf", "unicode"] }
regex-syntax = { version = "0.8" }
smallvec = { version = "1", default-features = false, features = ["const_new"] }

[build-dependencies]
lalrpop-util = { version = "0.20", features = ["lexer"] }
log = { version = "0.4", default-features = false, features = ["kv_unstable", "std"] }
memchr = { version = "2" }
mime_guess = { version = "2" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
regex = { version = "1" }
regex-automata = { version = "0.4", default-features = false, features = ["dfa-onepass", "hybrid", "meta", "nfa-backtrack", "perf", "unicode"] }
regex-syntax = { version = "0.8" }
smallvec = { version = "1", default-features = false, features = ["const_new"] }
syn = { version = "2", features = ["extra-traits", "full", "visit-mut"] }

### END HAKARI SECTION
